[package]
name = "gpu-accelerator"
version = "0.1.0"
edition = "2021"
authors = ["Casey DiGennaro <casey@deckboss.ai>"]
description = "CUDA Graph and DPX instruction wrappers for GPU acceleration"
license = "MIT"
repository = "https://github.com/SuperInstance/gpu-accelerator"

[dependencies]
cuda-runtime = "0.4"
cuda-driver = "0.4"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num-traits = "0.2"
num-complex = "0.4"

[dev-dependencies]
criterion = "0.5"
tokio-test = "0.4"
mockall = "0.13"
tempfile = "3.8"
float-cmp = "0.9"

[features]
default = []
gpu_tests = []
mock_gpu = []

[[bench]]
name = "graph_launch"
harness = false

[[bench]]
name = "memory_transfer"
harness = false

[[bench]]
name = "dpx_vs_cpu"
harness = false

[[bench]]
name = "sentiment_inference"
harness = false
